[gd_scene load_steps=13 format=3 uid="uid://c51byxexk8a3k"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_ehk2t"]
[ext_resource type="Texture2D" uid="uid://rgd2vdaqr3el" path="res://assets/boss/EVil Wizard 2/Sprites/Skeleton enemy.png" id="2_uhpbb"]

[sub_resource type="Animation" id="Animation_qu2al"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_4ilm7"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.566667, 0.666667, 0.766667, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0)]
}

[sub_resource type="Animation" id="Animation_c47x3"]
resource_name = "dead"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1), Vector2i(12, 1)]
}

[sub_resource type="Animation" id="Animation_kpuw6"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_c7xnj"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_5d8n1"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.966667, 1.03333, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(0, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpvdt"]
_data = {
"RESET": SubResource("Animation_qu2al"),
"attack": SubResource("Animation_4ilm7"),
"dead": SubResource("Animation_c47x3"),
"hurt": SubResource("Animation_kpuw6"),
"idle": SubResource("Animation_c7xnj"),
"walk": SubResource("Animation_5d8n1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tmcd7"]
radius = 165.148

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cesg6"]
size = Vector2(49, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6xry"]

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_ehk2t")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.96875, 0.84375)
texture = ExtResource("2_uhpbb")
hframes = 13
vframes = 5
frame = 39

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpvdt")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_tmcd7")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-2, -2)
shape = SubResource("RectangleShape2D_cesg6")

[node name="BossAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossAttack"]
position = Vector2(27, 0)
shape = SubResource("RectangleShape2D_r6xry")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="kill"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="BossAttack" to="." method="_on_boss_attack_body_entered"]
